# Sirius

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
Sirius/: CMakeLists.txt
Sirius/src/: Sirius.hpp
Sirius/src/Sirius/Core/: Application.hpp  Input.cpp  Layer.cpp  Layer.hpp  Window.hpp
Sirius/src/Sirius/Core/Logger/: Log.tpp
Sirius/src/Sirius/Events/: Event.hpp  MouseEvent.hpp
Sirius/src/Sirius/Math/: Math.hpp  functions.tpp
Sirius/src/Sirius/Math/Matrix/: Matrix2.hpp  clip_space.tpp  transforms.tpp
Sirius/src/Sirius/Math/Vector/: Vector.hpp  Vector2.tpp  transforms.tpp
Sirius/src/Sirius/Renderer/: RenderContext.hpp  Renderer.hpp  Renderer2D.hpp  Renderer3D.cpp  Renderer3D.hpp
Sirius/src/Sirius/UI/: Panels.cpp  Scene.hpp
app/: CMakeLists.txt  app.cpp
app/assets/shaders/: blue.glsl  emission.glsl  flat_color.glsl  texture.glsl
app/res/: imgui.ini
app/res/meshes/cylinder/: cylinder.mtl
app/res/meshes/suzanne/: suzanne.mtl
app/res/shaders/: emission.glsl  explode.glsl  flat_color.glsl  flat_texture.glsl  normals.glsl  postprocess.glsl  reflection.glsl  refraction.glsl  skybox.glsl  texture.glsl
example/: Example.cpp
include/: Simulation.h  Sirius.h  Sirius.hpp  srspch.h  srspch.hpp
include/Sirius/: EntryPoint.h  Input.h  Layer.h  LayerStack.h  Log.h  Simulation.h  Window.h  WindowsWindow.h
include/Sirius/Core/: Application.h  Application.hpp  Core.h  Core.hpp  EntryPoint.hpp  Input.h  Input.hpp  Layer.h  Layer.hpp  LayerStack.hpp  Log.h  Log.hpp  Log.tpp  MouseButtonCodes.h  Timestep.h  Window.h  Window.hpp
include/Sirius/Core/Logger/: Log.hpp
include/Sirius/Events/: ApplicationEvent.h  Event.h  Event.hpp  KeyEvent.h  MouseEvent.h
include/Sirius/ImGui/: ImGuiLayer.h  ImGuiLayer.hpp
include/Sirius/Math/: Math.h  Math.hpp  functions.h  functions.hpp  functions.tpp
include/Sirius/Math/Matrix/: Matrix.h  Matrix.hpp  Matrix.tpp  Matrix2.h  Matrix2.hpp  Matrix2.tpp  Matrix3.h  Matrix3.hpp  Matrix3.tpp  Matrix4.h  Matrix4.hpp  Matrix4.tpp  clip_space.h  clip_space.hpp  clip_space.tpp  functions.h  functions.hpp  functions.tpp  transforms.h  transforms.hpp  transforms.tpp
include/Sirius/Math/Vector/: Vector.h  Vector.hpp  Vector.tpp  Vector2.h  Vector2.hpp  Vector2.tpp  Vector3.h  Vector3.hpp  Vector3.tpp  Vector4.h  Vector4.hpp  Vector4.tpp  transforms.h  transforms.hpp  transforms.tpp
include/Sirius/Platform/Windows/: WindowsInput.h  WindowsWindow.h
include/Sirius/Renderer/: Buffer.h  Buffer.hpp  Camera.h  Camera.hpp  CameraController.h  CameraController.hpp  Color.hpp  Light.h  Material.hpp  Mesh.h  Model.hpp  RenderCommand.h  RenderCommand.hpp  RenderContext.h  RenderContext.hpp  Renderer.h  Renderer.hpp  Renderer2D.cpp  Renderer2D.h  Renderer2D.hpp  Renderer3D.hpp  Shader.h  Shader.hpp  Texture.h  Texture.hpp  VertexArray.h  VertexArray.hpp
include/Sirius/Renderer/Objects/: Camera.hpp  CameraController.hpp  Light.hpp  Model.hpp  PrefabMeshes.h  Skybox.hpp
include/Sirius/Renderer/Utils/: Buffer.hpp  Material.hpp  Shader.hpp  Texture.hpp  VertexArray.hpp
include/Sirius/UI/: ImGuiLayer.hpp  Panels.h  Panels.hpp  Scene.hpp
include/Sirius/Utilities/: Vector2.h  Vector2.tpp
lib/assimp/lib/pkgconfig/: assimp.pc
lib/glad/: CMakeLists.txt
lib/imgui/: imgui.cpp  imgui_demo.cpp  imgui_internal.h  imgui_widgets.cpp
lib/stb_image/: CMakeLists.txt
res/shaders/: emission.glsl  flat_texture.glsl  refraction.glsl
src/: EntryPoint.cpp  Simulation.cpp  Sirius.hpp  srspch.hpp
src/Core/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Input.cpp  Layer.hpp  LayerStack.hpp  Window.cpp  Window.hpp
src/Core/Input/: Input.hpp  KeyCodes.h
src/Core/Logger/: Logger.hpp  Logger.tpp
src/Events/: ApplicationEvent.hpp  Event.hpp  KeyEvent.hpp  MouseEvent.hpp
src/Math/: Math.hpp  matrix_functions.cpp
src/Renderer/: RenderCommand.cpp  RenderCommand.hpp  RenderContext.cpp  RenderContext.hpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  Renderer3D.cpp  Renderer3D.hpp
src/Renderer/Objects/: Camera.cpp  Camera.hpp  CameraController.cpp  CameraController.hpp  Light.hpp  Model.cpp  Model.hpp  PrefabMeshes.hpp
src/Renderer/Utils/: Buffer.hpp  Color.cpp  Color.hpp  Material.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.hpp
src/Sirius/: Input.cpp  Layer.cpp  LayerStack.cpp  Log.cpp  Simulation.cpp  Window.cpp  WindowsWindow.cpp
src/Sirius/Core/: Application.cpp  Application.hpp  Core.hpp  EntryPoint.hpp  Input.cpp  Layer.cpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Timestep.hpp  Window.cpp
src/Sirius/Core/Input/: Input.hpp
src/Sirius/Core/Logger/: Log.hpp  Log.tpp  Logger.hpp  Logger.tpp
src/Sirius/ImGui/: ImGuiLayer.cpp
src/Sirius/Math/: functions.cpp  functions.hpp  matrix_functions.cpp  matrix_functions.hpp  vector_functions.cpp  vector_functions.hpp
src/Sirius/Math/Matrix/: Matrix.hpp  Matrix.tpp  Matrix2.tpp  Matrix3.hpp  Matrix3.tpp  Matrix4.hpp  functions.hpp  functions.tpp
src/Sirius/Math/Vector/: Vector.tpp  Vector2.hpp  Vector2.tpp  Vector3.hpp  Vector3.tpp  Vector4.hpp  Vector4.tpp  transforms.hpp
src/Sirius/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp
src/Sirius/Renderer/: Buffer.cpp  Camera.cpp  CameraController.cpp  Color.cpp  Light.cpp  Material.cpp  Mesh.cpp  Model.cpp  RenderCommand.cpp  RenderCommand.hpp  RenderContext.cpp  Renderer.cpp  Renderer.hpp  Renderer2D.cpp  Renderer2D.hpp  Renderer3D.cpp  Renderer3D.hpp  Shader.cpp  Texture.cpp  VertexArray.cpp
src/Sirius/Renderer/Objects/: Camera.cpp  CameraController.cpp  CameraController.hpp  Light.cpp  Light.hpp  Model.cpp  Model.hpp  PrefabMeshes.cpp  Skybox.cpp  Skybox.hpp
src/Sirius/Renderer/Utils/: Buffer.cpp  Buffer.hpp  Color.cpp  Color.hpp  Material.cpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp
src/Sirius/UI/: ImGuiLayer.cpp  ImGuiLayer.hpp  Panels.cpp  Panels.hpp  Scene.cpp  Scene.hpp
src/UI/: ImGuiLayer.cpp  ImGuiLayer.hpp  Panels.cpp  Panels.hpp  Scene.cpp  Scene.hpp
test/: Test.cpp
test/assets/shaders/: blue.glsl  rainbow.glsl  texture.glsl
(+8 files in other folders)
